--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,10 +5,10 @@
     <nav>
     <ul>
         <li>
-        <%= link_to 'sobre','#' %>
+        <%= link_to 'sobre', sobre_path %>
         </li>
         <li>
-        <%= link_to 'Contato','#'%>
+        <%= link_to 'Contato', contato_path %>
         </li>
     </ul>
     </nav> 
