paginas staticas e home estilizada

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,9 @@
-<h1> Meu nome é optmus prime, sou lider dos autobots </h1>
-<%= @nome %>
+<div class="jumbotron">
+ <h1>Contact list </h1>
+ <p>
+    Gerencie seus contatos de qualquer lugar! 
+ </p>
+ <p>
+    <%= link_to 'crie sua conta', '#', class: 'btn btn-primary btn-lg' %>
+ </p>
+</div>
