--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,7 @@
   <head>
     <title>ContactList</title>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
+    
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -13,10 +12,18 @@
   <%= render 'layouts/header' %>
 
     <div class="container">
-    <%= yield %>
-    </div>
+        <% flash.each do |message_type, message| %>
+         <%= content_tag 'div', class: "alert alert-#{message_type} alert-dismissible", role: 'alert' do %>
+         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        </button>
+       <%= message %>
+      <% end %>
+    <% end %>
 
+    <%= yield %>     
     <%= render 'layouts/footer' %>
+    </div>
     
   </body>
 </html>
