atualizando links para novo cadastro

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -4,6 +4,6 @@
     Gerencie seus contatos de qualquer lugar! 
  </p>
  <p>
-    <%= link_to 'crie sua conta', '#', class: 'btn btn-primary btn-lg' %>
+    <%= link_to 'crie sua conta', new_user_path, class: 'btn btn-primary btn-lg' %>
  </p>
 </div>
